# SofTrees

./: CMakeLists.txt  SofTrees.code-workspace
include/: b2_utils.h  hash.h  plants.h  random.h
src/: b2_utils.cpp  main.cpp  plants.cpp  random.cpp
